Fixed incorrect camelCase writing of variables

--- a/config/project.json
+++ b/config/project.json
@@ -17,8 +17,8 @@
 		"orientation": {
 			"portrait": true,
 			"upsideDown": false,
-			"landscapeLeft": false,
-			"landscapeRight": false
+			"landScapeLeft": false,
+			"landScapeRight": false
 		}
 	},
 	"api": {
