--- a/config/Android/AndroidManifest.xml
+++ b/config/Android/AndroidManifest.xml
@@ -1,29 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="${PackageName}"
-      android:versionCode="1"
-      android:versionName="${Version}"
-      android:installLocation="auto" >
-    <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="21" />
-   <!-- Required for SEND_SMS function. -->
-    <uses-permission android:name="android.permission.SEND_SMS" />
-    <!-- Required for phone call functions. -->
-    <uses-permission android:name="android.permission.CALL_PHONE" />
-    <!-- Required for Internet access by 3G, GSM and WIFI -->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <!-- Required for GPS Usage. -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+		package="${PackageName}"
+		android:versionCode="1"
+		android:versionName="${Version}"
+		android:installLocation="auto" >
+	<uses-sdk android:minSdkVersion="10" android:targetSdkVersion="21" />
+	<!-- Required for SEND_SMS function. -->   
+	<uses-permission android:name="android.permission.SEND_SMS" />
+	<uses-permission android:name="android.permission.BLUETOOTH" />
+	<!-- Required for phone call functions. -->
+	<uses-permission android:name="android.permission.CALL_PHONE" />
+	<!-- Required for Internet access by 3G, GSM and WIFI -->
+	<uses-permission android:name="android.permission.INTERNET" />
+	<!-- Required for GPS Usage. -->
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<!-- Required for vibrate function. -->
-    <uses-permission android:name="android.permission.VIBRATE" />
-    <!-- Required for contact list functions. -->
-    <uses-permission android:name="android.permission.READ_CONTACTS"/>
-    <!-- Allows an application to get information about the currently or recently running tasks. --> 
-    <uses-permission android:name="android.permission.GET_TASKS"></uses-permission>
-    <!-- Required for camera functions. -->
-    <uses-permission android:name="android.permission.CAMERA" />
-    
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.VIBRATE" />
+	<!-- Required for contact list functions. -->
+	<uses-permission android:name="android.permission.READ_CONTACTS"/>
+	<!-- Allows an application to get information about the currently or recently running tasks. --> 
+	<uses-permission android:name="android.permission.GET_TASKS"></uses-permission>
+	<!-- Required for camera functions. -->
+	<uses-permission android:name="android.permission.CAMERA" />
+	
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
@@ -33,177 +34,167 @@
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
 	<uses-permission android:name="android.permission.RECEIVE_SMS" />
-  	<uses-permission android:name="android.permission.READ_SMS" />
+	<uses-permission android:name="android.permission.READ_SMS" />
 	<uses-permission android:name="com.android.vending.BILLING" />
-  	<uses-permission android:name="android.permission.WAKE_LOCK" />
-  	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-  	<permission
-        android:name="${PackageName}.permission.C2D_MESSAGE"
-        android:protectionLevel="signature" />
-    <uses-permission
-        android:name="${PackageName}.permission.C2D_MESSAGE" />
-
-    <!-- This app has permission to register and receive data message. -->
-    <uses-permission
-        android:name="com.google.android.c2dm.permission.RECEIVE" />
-    
-    <!-- GCM requires a Google account. -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
+	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+	<permission
+		android:name="${PackageName}.permission.C2D_MESSAGE"
+		android:protectionLevel="signature" />
+	<uses-permission
+		android:name="${PackageName}.permission.C2D_MESSAGE" />
+
+	<!-- This app has permission to register and receive data message. -->
+	<uses-permission
+		android:name="com.google.android.c2dm.permission.RECEIVE" />
 	
+	<!-- GCM requires a Google account. -->
+	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
+
 	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-		<uses-feature
-        android:glEsVersion="0x00020000"
-        android:required="true"/>
-    <permission
-        android:name="${PackageName}.permission.MAPS_RECEIVE"
-        android:protectionLevel="signature"/>
+	<uses-feature
+		android:glEsVersion="0x00020000"
+		android:required="true"/>
+	<permission
+		android:name="${PackageName}.permission.MAPS_RECEIVE"
+		android:protectionLevel="signature"/>
 	<uses-permission android:name="${PackageName}.permission.MAPS_RECEIVE"/>
 	
 	${compatibleScreens}
 
-    ${supportsScreens}
+	${supportsScreens}
+	
+	<application  android:icon="@drawable/icon" android:label="${ApplicationName}" android:largeHeap="true"  android:name="android.support.multidex.MultiDexApplication">
+		 
+			<activity android:name=".A" 
+					android:label="${ApplicationName}" 	
+					android:configChanges="keyboardHidden|orientation|screenSize" 
+					android:launchMode="singleTask"
+					android:windowSoftInputMode="adjustPan"
+					android:screenOrientation="${Orientation}"
+					android:theme="@style/AppTheme" >
+				 
+					<intent-filter>
+						<action android:name="android.intent.action.SEARCH" />
+					</intent-filter>
+					<meta-data android:name="android.app.searchable"
+								 android:resource="@xml/searchable"/>	
+					<intent-filter>
+						<action android:name="android.intent.action.MAIN" />
+						<category android:name="android.intent.category.LAUNCHER" />
+					</intent-filter>
+				
+					<intent-filter>
+						<action android:name="biz.smartface3.smartface_demo.run" />
+						<category android:name="android.intent.category.DEFAULT" />
+					</intent-filter>
+			</activity>
+			<activity android:name="io.smartface.android.SpNotifications"
+				android:label="@string/app_name"
+				android:excludeFromRecents ="true"
+			>
+				<intent-filter >
+					<action android:name="${PackageName}.notifier.run" />
+					<category android:name="android.intent.category.DEFAULT" />
+				</intent-filter>
+			</activity>
+			<receiver android:name="io.smartface.android.notifications.MyBroadCastReceiver">
+				<intent-filter >
+					<action android:name="${PackageName}.localReceiver" />
+				</intent-filter>
+			</receiver>
+			
+			<provider android:name="io.smartface.android.ui.AssetVideoProvider" android:authorities="${PackageName}.videoprovider"></provider>
+			
+			<receiver android:name="io.smartface.android.ConnectionChangeReceiver"
+				android:label="NetworkConnectionListener">
+				<intent-filter>
+					<action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
+				</intent-filter>
+			</receiver>
+	
+			<receiver android:name="io.smartface.android.SmsListener" android:enabled="true">
+				<intent-filter>
+					<action android:name="android.provider.Telephony.SMS_RECEIVED" />
+					<action android:name="android.provider.Telephony.SMS_REJECTED" />
+				</intent-filter>
+			</receiver>
 
-    <application android:icon="@drawable/icon" android:label="${ApplicationName}" android:largeHeap="true"  android:name=".Application">
-        <activity android:name=".A" 
-            android:label="${ApplicationName}" 	
-            android:configChanges="keyboardHidden|orientation|screenSize" 
-            android:launchMode="singleTask"
-            android:windowSoftInputMode="adjustPan"
-			android:screenOrientation="${Orientation}"
-			android:theme="@style/AppTheme"
-            >
-            
-            <intent-filter>
-              <action android:name="android.intent.action.SEARCH" />
-          </intent-filter>
-          <meta-data android:name="android.app.searchable"
-                   android:resource="@xml/searchable"/> 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            <intent-filter>
-                <action android:name="biz.smartface3.smartface_demo.run" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-         <activity android:name="com.geniem.sprat.SpNotifications"
-                  android:label="@string/app_name"
-                  android:excludeFromRecents ="true"
-                  >
-            <intent-filter >
-                <action android:name="${PackageName}.notifier.run" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
-        <receiver android:name="com.geniem.sprat.notifications.MyBroadCastReceiver">
-            <intent-filter >
-                <action android:name="${PackageName}.localReceiver" />
-            </intent-filter>
-        </receiver>
-        <uses-library android:name="com.google.android.maps" />
-  
-        
-        <provider android:name="com.geniem.sprat.ui.AssetVideoProvider" android:authorities="${PackageName}.videoprovider"></provider>
-        
-        <receiver android:name="com.geniem.sprat.ConnectionChangeReceiver"
-          android:label="NetworkConnectionListener">
-			  <intent-filter>
-			    <action android:name="android.net.conn.CONNECTIVITY_CHANGE"/>
-			  </intent-filter>
-		</receiver>
-		
-        <receiver android:name="com.geniem.sprat.SmsListener" android:enabled="true">
-	  	   <intent-filter>
-	  	    <action android:name="android.provider.Telephony.SMS_RECEIVED" />
-	  	    <action android:name="android.provider.Telephony.SMS_REJECTED" />
-	  	</intent-filter>
-  		</receiver>
-        
-        <service android:name="com.geniem.sprat.billing.BillingService" />
-		<receiver android:name="com.geniem.sprat.billing.BillingReceiver">
-			<intent-filter>
-				<action android:name="com.android.vending.billing.IN_APP_NOTIFY" />
-                <action android:name="com.android.vending.billing.RESPONSE_CODE" />
-                <action android:name="com.android.vending.billing.PURCHASE_STATE_CHANGED" />	
-			</intent-filter>
-		</receiver>
-		
-		        <!--
-          BroadcastReceiver that will receive intents from GCM
-          services and handle them to the custom IntentService.
+			<service android:name="com.geniem.sprat.billing.BillingService" />
+			<receiver android:name="com.geniem.sprat.billing.BillingReceiver">
+				<intent-filter>
+					<action android:name="com.android.vending.billing.IN_APP_NOTIFY" />
+					<action android:name="com.android.vending.billing.RESPONSE_CODE" />
+					<action android:name="com.android.vending.billing.PURCHASE_STATE_CHANGED" />  
+				</intent-filter>
+			</receiver>
 
-          The com.google.android.c2dm.permission.SEND permission is necessary
-          so only GCM services can send data messages for the app.
-        -->
-         
-       <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-         
-        <receiver
-            android:name="com.geniem.sprat.notifications.GcmBroadcastReceiver"
-            android:permission="com.google.android.c2dm.permission.SEND" >
-            <intent-filter>
-          
-                <!-- Receives the actual messages. -->
-             
-                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
-             
-                <!-- Receives the registration id. -->
-               
-                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
-                
-               
-                <category android:name="${PackageName}" />
-            </intent-filter>
-        </receiver>
-        <activity android:name="com.facebook.android.smartfaceplugin.PickFriendsActivity"
-                  android:label="@string/app_name" />
-		<activity android:name="com.facebook.LoginActivity"
-                  android:theme="@android:style/Theme.Translucent.NoTitleBar"
-                  android:label="@string/app_name" />
-		<meta-data android:name="com.facebook.sdk.ApplicationId" android:value="\ 382731785195385"/>
-        
+			<!--
+				BroadcastReceiver that will receive intents from GCM
+				services and handle them to the custom IntentService.
 
-        <!--
-          Application-specific subclass of GCMBaseIntentService that will
-          handle received messages.
+				The com.google.android.c2dm.permission.SEND permission is necessary
+				so only GCM services can send data messages for the app.
+			-->
 
-          By default, it must be named .GCMIntentService, unless the
-          application uses a custom BroadcastReceiver that redefines its name.
-        -->
-        <service android:name="com.geniem.sprat.notifications.GcmIntentService" />	
-        <meta-data
-			android:name="${PackageName}.useActionBar"
-			android:value="true"/>
-        <meta-data
-		   android:name="com.google.android.maps.v2.API_KEY"
-		   android:value="AIzaSyDYMd2n7_RAVBu-lacJ1FaJtgZWIeDcBUg"/>
-		   
-        <activity android:name="com.google.android.gms.ads.AdActivity"
-             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
- 
-        <service android:name="com.geniem.sprat.notifications.LocalNotificationService"
-                 android:enabled="true" />
-         
-        <receiver android:name="com.geniem.sprat.notifications.LocalNotificationReceiver"/>
-        
-        <service android:name="com.geniem.sprat.notifications.NLService"
-            android:enabled="true"
-          android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
-     		<intent-filter>
-         		<action android:name="android.service.notification.NotificationListenerService" />
-     		</intent-filter>
- 		</service>
-		
-    </application>
+			<meta-data
+				android:name="com.google.android.gms.version"
+				android:value="@integer/google_play_services_version"
+			/>
+			<receiver
+					android:name="com.google.android.gms.gcm.GcmReceiver"
+					android:exported="true"
+					android:permission="com.google.android.c2dm.permission.SEND"
+			>
+				<intent-filter>
+					<!-- Receives the actual messages. -->
+					<action android:name="com.google.android.c2dm.intent.RECEIVE" />
+					<!-- support pre-4.4 KitKat devices. -->
+					<action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+					<category android:name="${PackageName}" />
+				</intent-filter>
+			</receiver>
+			<!--
+				Application-specific subclass of GCMBaseIntentService that will
+				handle received messages.
+
+				By default, it must be named .GCMIntentService, unless the
+				application uses a custom BroadcastReceiver that redefines its name.
+			-->
+			<service android:name="io.smartface.android.notifications.GCMListenerService" android:exported="false">
+				<intent-filter>
+					<action android:name="com.google.android.c2dm.intent.RECEIVE" />
+				</intent-filter>
+			</service>
+			
+			<meta-data
+				android:name="com.google.android.maps.v2.API_KEY"
+				android:value="AIzaSyBYmxE1Mw9MnrmpxgI0TrDqF8QoN0ISR3g"/>
+			<meta-data
+				android:name="${PackageName}.useActionBar"
+				android:value="true"/>
+
+			<activity android:name="com.google.android.gms.ads.AdActivity"
+					 android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"/>
+
+			<service android:name="io.smartface.android.notifications.LocalNotificationService"
+				 android:enabled="true" />
+			 
+			<receiver android:name="io.smartface.android.notifications.LocalNotificationReceiver"/>
+			
+			<service android:name="io.smartface.android.notifications.NLService"
+					android:enabled="true"
+					android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+				<intent-filter>
+					<action android:name="android.service.notification.NotificationListenerService" />
+				</intent-filter>
+			</service>
+
+	</application>
 </manifest>
-
-
-
