Updates for 4.5.0 release

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 .c9/*
 output/Android/*
 output/iOS/*
-plugin
+plugin/Android/*
+plugin/iOS/*
 !output/Android/README.md
 !output/iOS/README.md
+!plugin/Android/README.md
+!plugin/iOS/README.md
