--- a/config/project.json
+++ b/config/project.json
@@ -55,11 +55,11 @@
 				"urlSchemes": "",
 				"plugins": {
 					"facebookios": {
-						"path": "$PROJECT_ROOT/plugin/iOS/facebook.zip",
+						"path": "plugins/iOS/facebook.zip",
 						"active": false
 					},
 					"googleanalyticsplugin-ios": {
-						"path": "$PROJECT_ROOT/plugin/iOS/GoogleAnalyticsiOS.zip",
+						"path": "plugins/iOS/GoogleAnalyticsiOS.zip",
 						"active": false
 					}
 				}
@@ -78,11 +78,11 @@
 				},
 				"plugins": {
 					"facebookios": {
-						"path": "$PROJECT_ROOT/plugin/iOS/facebook.zip",
+						"path": "plugins/iOS/facebook.zip",
 						"active": false
 					},
 					"googleanalyticsplugin-ios": {
-						"path": "$PROJECT_ROOT/plugin/iOS/GoogleAnalyticsiOS.zip",
+						"path": "plugins/iOS/GoogleAnalyticsiOS.zip",
 						"active": false
 					}
 
