--- a/config/project.json
+++ b/config/project.json
@@ -55,15 +55,27 @@
 				"urlSchemes": "",
 				"plugins": {
 					"facebookios": {
-						"path": "plugins/iOS/facebook.zip",
+						"url": "https://smartfacecdn.blob.core.windows.net/smartface-bin/plugins/Facebook/iOS/1.0.0/FacebookiOS.zip",
+						"path": "plugins/iOS/FacebookiOS.zip",
 						"active": false
 					},
 					"googleanalyticsplugin-ios": {
+						"url": "https://smartfacecdn.blob.core.windows.net/smartface-bin/plugins/GoogleAnalytics/iOS/1.0.0/GoogleAnalyticsiOS.zip",
 						"path": "plugins/iOS/GoogleAnalyticsiOS.zip",
+						"active": false
+					},
+					"admob-ios": {
+						"url": "https://smartfacecdn.blob.core.windows.net/smartface-bin/plugins/AdMob/iOS/1.0.0/AdmobiOS.zip",
+						"path": "plugins/iOS/AdmobiOS.zip",
+						"active": false
+					},
+					"codereaderios": {
+						"url": "https://smartfacecdn.blob.core.windows.net/smartface-bin/plugins/CodeReader/iOS/1.0.0/CodeReaderiOS.zip",
+						"path": "plugins/iOS/CodeReaderiOS.zip",
 						"active": false
 					}
 				}
-			},jlıkjıjlk
+			},
 			"android": {
 				"scripts": "scripts",
 				"images": "images/Android",
@@ -77,15 +89,26 @@
 					"keyPass": "smartface"
 				},
 				"plugins": {
-					"facebookios": {
-						"path": "plugins/iOS/facebook.zip",
+					"facebook": {
+						"url": "https://smartfacecdn.blob.core.windows.net/smartface-bin/plugins/Facebook/Android/1.0.0/FacebookAndroid.zip",
+						"path": "plugins/Android/FacebookAndroid.zip",
 						"active": false
 					},
-					"googleanalyticsplugin-ios": {
-						"path": "plugins/iOS/GoogleAnalyticsiOS.zip",
+					"googleanalytics": {
+						"url": "https://smartfacecdn.blob.core.windows.net/smartface-bin/plugins/GoogleAnalytics/Android/1.0.0/GoogleAnalyticsAndroid.zip",
+						"path": "plugins/Android/GoogleAnalyticsAndroid.zip",
+						"active": false
+					},
+					"smfimagecode": {
+						"url": "https://smartfacecdn.blob.core.windows.net/smartface-bin/plugins/CodeReader/Android/1.0.0/CodeReaderAndroid.zip",
+						"path": "plugins/Android/CodeReaderAndroid.zip",
+						"active": false
+					},
+					"smfparse": {
+						"url": "https://smartfacecdn.blob.core.windows.net/smartface-bin/plugins/Parse/Android/1.0.0/ParseAndroid.zip",
+						"path": "plugins/Android/ParseAndroid.zip",
 						"active": false
 					}
-
 				}
 			}
 		},
