Added keys section to project.config

--- a/config/project.json
+++ b/config/project.json
@@ -110,6 +110,10 @@
 						"active": false
 					}
 				}
+			},
+			"keys": {
+				"project3DesKey": "",
+				"projectEncryptedKey": ""
 			}
 		},
 		"output": {
