added missing "iosKey" for beta006

--- a/config/project.json
+++ b/config/project.json
@@ -31,7 +31,8 @@
 			"consumerSecret": ""
 		},
 		"googleMaps": {
-			"androidKey": "01u81e3cP5lidl1HRJ55hoBH0N5_Kmlvku4EIYg"
+			"androidKey": "01u81e3cP5lidl1HRJ55hoBH0N5_Kmlvku4EIYg",
+			"iosKey": ""
 		},
 		"adMob": {
 			"publisherId": ""
