--- a/config/project.json
+++ b/config/project.json
@@ -44,6 +44,9 @@
 			"inAppPurchaseProductKey": ""
 		}
 	},
+	"workspace": {
+		"autoUpdatePlayers": true
+	},
 	"build": {
 		"input": {
 			"ios": {
@@ -74,7 +77,8 @@
 						"path": "plugins/iOS/CodeReaderiOS.zip",
 						"active": false
 					}
-				}
+				},
+				"playerPath": null
 			},
 			"android": {
 				"scripts": "scripts",
@@ -109,6 +113,10 @@
 						"path": "plugins/Android/ParseAndroid.zip",
 						"active": false
 					}
+				},
+				"playerPath": {
+					"ARM": null,
+					"x86": null
 				}
 			},
 			"keys": {
