--- a/config/project.json
+++ b/config/project.json
@@ -58,28 +58,28 @@
 				"urlSchemes": "",
 				"plugins": {
 					"facebookios": {
-						"url": "https://az793023.vo.msecnd.net/smartface-bin/plugins/Facebook/iOS/1.1.0/FacebookiOS.zip",
-						"path": "plugins/iOS/FacebookiOS.zip",
+						"url": "https://az793023.vo.msecnd.net/smartface-bin/plugins/Facebook/iOS/2.0.0/facebookios.zip",
+						"path": "plugins/iOS/facebookios.zip",
 						"active": false
 					},
-					"googleanalyticsplugin-ios": {
-						"url": "https://az793023.vo.msecnd.net/smartface-bin/plugins/GoogleAnalytics/iOS/1.0.0/GoogleAnalyticsiOS.zip",
-						"path": "plugins/iOS/GoogleAnalyticsiOS.zip",
+					"googleanalyticsios": {
+						"url": "https://az793023.vo.msecnd.net/smartface-bin/plugins/GoogleAnalytics/iOS/2.0.0/googleanalyticsios.zip",
+						"path": "plugins/iOS/googleanalyticsios.zip",
 						"active": false
 					},
-					"admob-ios": {
-						"url": "https://az793023.vo.msecnd.net/smartface-bin/plugins/AdMob/iOS/1.0.0/AdmobiOS.zip",
-						"path": "plugins/iOS/AdmobiOS.zip",
+					"admobios": {
+						"url": "https://az793023.vo.msecnd.net/smartface-bin/plugins/AdMob/iOS/2.0.0/admobios.zip",
+						"path": "plugins/iOS/admobios.zip",
 						"active": false
 					},
 					"codereaderios": {
-						"url": "https://az793023.vo.msecnd.net/smartface-bin/plugins/CodeReader/iOS/1.0.0/CodeReaderiOS.zip",
-						"path": "plugins/iOS/CodeReaderiOS.zip",
+						"url": "https://az793023.vo.msecnd.net/smartface-bin/plugins/CodeReader/iOS/2.0.0/codereaderios.zip",
+						"path": "plugins/iOS/codereaderios.zip",
 						"active": false
 					},
-					"SalesForceSMF": {
-						"url": "https://az793023.vo.msecnd.net/smartface-bin/plugins/SalesForce/iOS/1.0.0/SalesForceSMF.zip",
-						"path": "plugins/iOS/SalesForceSMF.zip",
+					"salesforcesmf": {
+						"url": "https://az793023.vo.msecnd.net/smartface-bin/plugins/SalesForce/iOS/2.0.0/salesforcesmf.zip",
+						"path": "plugins/iOS/salesforcesmf.zip",
 						"active": false
 					}
 				},
