Update and rename project.testdistribution.json to project.testingdistribution.json

--- a/config/project.testingdistribution.json
+++ b/config/project.testingdistribution.json
@@ -2,7 +2,7 @@
     "build": {
         "output": {
             "android": {
-                "testDistribution": {
+                "testingDistribution": {
                     "packageProfileName": "Default"
                 }
             }
