--- a/config/project.json
+++ b/config/project.json
@@ -114,10 +114,7 @@
 						"active": false
 					}
 				},
-				"playerPath": {
-					"ARM": null,
-					"x86": null
-				}
+				"playerPath": null
 			},
 			"keys": {
 				"project3DesKey": "",
