--- a/config/iOS/Info.plist
+++ b/config/iOS/Info.plist
@@ -44,6 +44,10 @@
 	<key>UILaunchImages</key>
 	<array>
 		<dict>
+			<key>NSLocationUsageDescription</key>
+			<string></string>
+			<key>NSBluetoothPeripheralUsageDescription</key>
+			<string></string>
 			<key>UILaunchImageMinimumOSVersion</key>
 			<string>8.0</string>
 			<key>UILaunchImageName</key>
