--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,6 +1,7 @@
 {
     "dependencies": {
-        "nf-core": "^1.0.0",
-        "extend": "^1.0.0"
+        "nf-core": "0.1.0-beta.1",
+        "extend": "^1.0.0",
+        "js-base": "^1.0.0"
     }
 }
