--- a/config/iOS/Info.plist
+++ b/config/iOS/Info.plist
@@ -7,6 +7,20 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>UIRequiresFullScreen</key>
+	<true/>
+	<key>NSContactsUsageDescription</key>
+	<string>Your NSContactsUsageDescription</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Your NSPhotoLibraryUsageDescription</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Your NSBluetoothPeripheralUsageDescription</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Your NSCameraUsageDescription</string>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>Your NSAppleMusicUsageDescription</string>
+	<key>NSMotionUsageDescription</key>
+	<string>Your NSMotionUsageDescription</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
