Move themes folder & delete defaults.xml & update project.json

--- a/config/project.json
+++ b/config/project.json
@@ -19,7 +19,8 @@
 			"upsideDown": false,
 			"landScapeLeft": false,
 			"landScapeRight": false
-		}
+		},
+		"theme": "Defaults"
 	},
 	"api": {
 		"facebook": {
