udpated empty-workspace pages

--- a/scripts/.settings.json
+++ b/scripts/.settings.json
@@ -1,7 +1,10 @@
 {
 	"config": {
 		"theme": {
-			"currentTheme": "Defaults"
+			"currentTheme": "Defaults",
+			"themes": [
+				"Defaults"
+			]
 		}
 	}
 }
