--- a/scripts/package.json
+++ b/scripts/package.json
@@ -2,6 +2,6 @@
     "dependencies": {
         "sf-core": "^1.0.0",
         "js-base": "^1.0.0",
-        "@smartface/styler": "1.0.10"
+        "@smartface/styler": "^1.0.0"
     }
 }
