--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ plugin/iOS/*
 !output/iOS/README.md
 !plugin/Android/README.md
 !plugin/iOS/README.md
-scripts/node_modules
+!scripts/node_modules
 scripts/ui
-scripts/.settings.json
+scripts/settings.json
 scripts/themes
