--- a/config/Android/AndroidManifest.xml
+++ b/config/Android/AndroidManifest.xml
@@ -6,65 +6,76 @@
 		android:installLocation="auto" >
 	<uses-sdk android:minSdkVersion="17" android:targetSdkVersion="24" />
 	<!-- Required for SEND_SMS function. -->   
-	<uses-permission android:name="android.permission.SEND_SMS" />
-	<uses-permission android:name="android.permission.BLUETOOTH" />
+	<!-- <uses-permission android:name="android.permission.SEND_SMS" /> -->
+	<!-- <uses-permission android:name="android.permission.BLUETOOTH" /> -->
 	<!-- Required for phone call functions. -->
-	<uses-permission android:name="android.permission.CALL_PHONE" />
+	<!-- <uses-permission android:name="android.permission.CALL_PHONE" /> -->
 	<!-- Required for Internet access by 3G, GSM and WIFI -->
 	<uses-permission android:name="android.permission.INTERNET" />
 	<!-- Required for GPS Usage. -->
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<!-- <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> -->
+	<!-- <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> -->
 	<!-- Required for vibrate function. -->
-	<uses-permission android:name="android.permission.VIBRATE" />
+	<!-- <uses-permission android:name="android.permission.VIBRATE" /> -->
 	<!-- Required for contact list functions. -->
-	<uses-permission android:name="android.permission.READ_CONTACTS"/>
+	<!-- <uses-permission android:name="android.permission.READ_CONTACTS"/> -->
 	<!-- Allows an application to get information about the currently or recently running tasks. --> 
-	<uses-permission android:name="android.permission.GET_TASKS"/>
+	<!--<uses-permission android:name="android.permission.GET_TASKS"/>-->
 	<!-- Required for camera functions. -->
-	<uses-permission android:name="android.permission.CAMERA" />
+	<!-- <uses-permission android:name="android.permission.CAMERA" /> -->
 	
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-	<uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
-	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
-	<uses-permission android:name="android.permission.PERSISTENT_ACTIVITY" />
-	<uses-permission android:name="android.permission.RESTART_PACKAGES" />
-	<uses-permission android:name="android.permission.WAKE_LOCK" />
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+	<!-- Required for write external storage. -->
+	<!-- <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> -->
+	<!-- <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" /> -->
 
-	<uses-permission android:name="android.permission.RECEIVE_SMS" />
-	<uses-permission android:name="android.permission.READ_SMS" />
-	<uses-permission android:name="com.android.vending.BILLING" />
-	<uses-permission android:name="android.permission.WAKE_LOCK" />
-	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-	<permission
+<!-- 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" /> -->
+
+	<!-- Required for read phone state. -->
+	<!-- <uses-permission android:name="android.permission.READ_PHONE_STATE" /> -->
+<!-- 	<uses-permission android:name="android.permission.PERSISTENT_ACTIVITY" />
+	<uses-permission android:name="android.permission.RESTART_PACKAGES" /> -->
+	<!-- <uses-permission android:name="android.permission.WAKE_LOCK" /> -->
+<!-- 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" /> -->
+
+	<!-- Required for receive sms. -->
+	<!-- <uses-permission android:name="android.permission.RECEIVE_SMS" /> -->
+	<!-- Required for read sms. -->
+	<!-- <uses-permission android:name="android.permission.READ_SMS" /> -->
+	<!-- <uses-permission android:name="com.android.vending.BILLING" /> -->
+	<!-- <uses-permission android:name="android.permission.WAKE_LOCK" /> -->
+	<!-- <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" /> -->
+	<!-- Required for cloud messaging. -->
+	<!-- <permission
 		android:name="${PackageName}.permission.C2D_MESSAGE"
 		android:protectionLevel="signature" />
 	<uses-permission
-		android:name="${PackageName}.permission.C2D_MESSAGE" />
+		android:name="${PackageName}.permission.C2D_MESSAGE" /> -->
 
 	<!-- This app has permission to register and receive data message. -->
-	<uses-permission
-		android:name="com.google.android.c2dm.permission.RECEIVE" />
+	<!-- <uses-permission
+		android:name="com.google.android.c2dm.permission.RECEIVE" /> -->
 	
 	<!-- GCM requires a Google account. -->
-	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
-	<uses-permission android:name="android.permission.WAKE_LOCK" />
+	<!-- <uses-permission android:name="android.permission.GET_ACCOUNTS" /> -->
+	<!-- <uses-permission android:name="android.permission.WAKE_LOCK" /> -->
 
-	<uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-	<uses-feature
+	<!-- <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/> -->
+	<!-- Required for accessing location. -->
+	<!-- <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/> -->
+
+	<!-- GCM requires access location. -->
+	<!-- <uses-feature
 		android:glEsVersion="0x00020000"
-		android:required="true"/>
-	<permission
+		android:required="true"/> -->
+	<!-- Required for google maps. -->
+	<!-- <permission
 		android:name="${PackageName}.permission.MAPS_RECEIVE"
 		android:protectionLevel="signature"/>
-	<uses-permission android:name="${PackageName}.permission.MAPS_RECEIVE"/>
+	<uses-permission android:name="${PackageName}.permission.MAPS_RECEIVE"/> -->
 	
 	${compatibleScreens}
 
