--- a/scripts/package.json
+++ b/scripts/package.json
@@ -3,7 +3,7 @@
         "sf-core": "^2.0.0",
         "js-base": "1.0.4",
         "@smartface/styler": "^1.0.0",
-        "@smartface/contx": "*",
-        "sf-extension-utils": "*"
+        "@smartface/contx": "^1.0.0-rc.6",
+        "sf-extension-utils": "^3.2.1"
     }
 }
