Rename theme Defaults to defaultTheme

--- a/scripts/settings.json
+++ b/scripts/settings.json
@@ -1,9 +1,9 @@
 {
 	"config": {
 		"theme": {
-			"currentTheme": "Defaults",
+			"currentTheme": "defaultTheme",
 			"themes": [
-				"Defaults"
+				"defaultTheme"
 			]
 		},
 		"version": "6.5.3"
