--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,6 @@ plugin/*
 !output/iOS/README.md
 !plugin/Android/README.md
 !plugin/iOS/README.md
-scripts/node_modules
+node_modules/
 scripts/ui
 scripts/themes
