--- a/scripts/package.json
+++ b/scripts/package.json
@@ -3,7 +3,7 @@
     "@smartface/contx": "^1.2.0",
     "@smartface/styler": "^1.3.15",
     "js-base": "1.0.4",
-    "sf-core": "^2.0.10-beta.1",
+    "sf-core": "^2.0.10",
     "sf-extension-utils": "^3.5.0"
   }
 }
