--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@smartface/contx": "^1.2.0",
+    "@smartface/html-to-text": "^1.0.0",
     "@smartface/styler": "^1.3.15",
     "js-base": "1.0.4",
     "sf-core": "^2.0.10",
