--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
   "dependencies": {
-    "@smartface/smartface.ui-editor": "6.6.5-beta.18"
+    "@smartface/smartface.ui-editor": "6.7.0"
   }
 }
