--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "@smartface/contx": "^1.3.0-rc.3",
+    "@smartface/contx": "^1.3.0",
     "@smartface/html-to-text": "^1.0.7",
     "@smartface/styler": "^1.3.15",
     "js-base": "1.0.4",
