--- a/config/Android/AndroidManifest.xml
+++ b/config/Android/AndroidManifest.xml
@@ -36,9 +36,9 @@
 <!-- 	<uses-permission android:name="android.permission.PERSISTENT_ACTIVITY" />
 	<uses-permission android:name="android.permission.RESTART_PACKAGES" /> -->
 	<!-- <uses-permission android:name="android.permission.WAKE_LOCK" /> -->
-<!-- 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+ 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
-	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" /> -->
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
 	<!-- Required for receive sms. -->
 	<!-- <uses-permission android:name="android.permission.RECEIVE_SMS" /> -->
