--- a/package.json
+++ b/package.json
@@ -1,5 +1,48 @@
 {
+  "name": "helloworld-boilerplate-parent",
+  "description": "This is Smartface's router test project",
+  "author": {
+    "name": "Smartface",
+    "email": "info@smartface.io",
+    "url": "http://smartface.io"
+  },
+  "private": true,
+  "keywords": [
+    "smartface",
+    "javascript",
+    "typescript",
+    "router",
+    "mobile",
+    "cross-platform",
+    "native"
+  ],
   "dependencies": {
-    "@smartface/smartface.ui-editor": "6.14.1"
+    "@smartface/marketplace-service": "^1.2.0-beta",
+    "@smartface/transpiler": "^8.0.0-rc",
+    "cross-env": "^7.0.3",
+    "rimraf": "^3.0.2",
+    "typescript": "4.2.3"
+  },
+  "scripts": {
+    "build:tsc": "rimraf dist && tsc",
+    "build:sf": "cross-env ROOT_PATH=$PWD transpiler --standalone",
+    "build:transpile": "rimraf scripts/generated && yarn run build:sf && yarn run build:tsc",
+    "watch:tsc": "rimraf dist && tsc -w",
+    "watch:sf": "rimraf scripts/generated && cross-env ROOT_PATH=$PWD transpiler",
+    "lint": "eslint .",
+    "lint:fix": "eslint ./ --fix",
+    "prettier": "prettier --write ."
+  },
+  "devDependencies": {
+    "@smartface/dispatcher": "^0.4.0 || ^0.4.0-beta",
+    "@smartface/image-processor": "^1.2.0",
+    "@smartface/library-reader": "^0.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.0"
   }
 }
