--- a/scripts/package.json
+++ b/scripts/package.json
@@ -1,14 +1,12 @@
 {
-	"dependencies": {
-		"@smartface/contx": "~2.1.0",
-		"@smartface/html-to-text": "^1.0.7",
-		"@smartface/router": "^1.1.0",
-		"@smartface/styler": "^1.3.15",
-		"js-base": "1.0.4",
-		"sf-extension-utils": "^5.0.0",
-		"sf-core": "^4.0.0"
-	},
-	"scripts": {
-		"postinstall": "ENV_PATH=.smf/.env sfMarketplaceService install"
-	}
+    "dependencies": {
+        "@smartface/component-keyboardlayout": "^3.0.0",
+        "@smartface/component-materialtextbox": "^5.0.0",
+        "@smartface/contx": "^4.0.0",
+        "@smartface/extension-utils": "^16.2.0",
+        "@smartface/native": "^4.3.5 || ^4.3.5-beta",
+        "@smartface/router": "2.0.0-rc",
+        "@smartface/styler": "^2.0.0",
+        "source-map": "0.6.1"
+    }
 }
